2.20 - ?
	- Order the VNs listed on char browser by release date
	- Order the traits groups on /i by their 'order' column
	- Use same browsing-table on trait pages and char browser
	- Added spoiler warning to character revision pages
	- Generate dbedit/dbdel notifications on character edits
	- CSS: Hide links in [spoiler] tags
	- Added 'select' all to wishlist and moved 'select all' down on notifies
	- Added char/tag/trait stats to database statistics box
	- Update traits_chars cache daily using Multi::Maintenance
	- Toggle [spoiler] tag visibility with global setting rather than mouse-over
	- Cleaned up CSS code
	- Bugfix: don't accidentally remove char traits when editing
	- Bugfix: fixed possible SQL table name clash on history browser
	- Bugfix: properly announce chars and traits in Multi::IRC
	- Bugfix: display more than 10 characters on VN page
	- Bugfix: removed Perl warning in Handler::Chars
	- Bugfix: use the 'vnlists' table to calculate stats on user page
	- Bugfix: allow adding/copying a char with instance field set
	- Bugfix: copy over search string when switching to trait search
	- Bugfix: Use the translatable role names on char<->vn link form
	- Bugfix: Prevent the spiol dd to hide the del link on char<->trait form
	- Bugfix: Hide pointless groups and commas on spoiler-hidden trait display
	- Bugfix: Properly format future dates on my vn list
	- Bugfix: Properly position the sub-tabs on VN page without tags
	- Bugfix: Forgot to make two JS strings translatable

2.19 - 2011-03-30
	- Character database:
	  - New DB item (versioned): character, page: /c+
	  - New DB item (not versioned): traits (like tags), page: /i+
	  - New pages: trait listing/browser: /i/*
	  - New pages: character browser: /c/*
	  - VN pages updated with a characters tab
	- Changed text color of inactive tabs
	- Don't allow users to edit their post when it was deleted
	- Auto-set category when creating new child tag
	- Increased allowed size of VN cover image upload to 5MB
